staging/tvplatform-admin-frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvplatform-admin-frontend
  namespace: default
  labels:
    app: tvplatform-admin-frontend
    env: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvplatform-admin-frontend
      env: staging
  template:
    metadata:
      labels:
        app: tvplatform-admin-frontend
        env: staging
    spec:
      containers:
      - name: tvplatform-admin-frontend
        image: registry.digitalocean.com/obs-tvplatform-backend/tvplatform-admin-frontend:6-staging # will be updated by jenkins PRs
        imagePullPolicy: Always
      imagePullSecrets:
      - name: obs-tvplatform-backend
