staging/tvplatform-admin-frontend/ingress.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: oro-ca
  name: tvplatform-user-frontend-home
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.ooro.co.uk
        - ooro.co.uk
      secretName: oro-ca
  rules:
    - host: www.ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-user-frontend-home
                port:
                  number: 80
    - host: ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-user-frontend-home
                port:
                  number: 80
